--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "nohup node index.js > /dev/null 2>&1 &",
+    "start": "node index.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
