--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node index.js && timeout /t 1200 && npm start"
+    "start": "node index.js && timeout /t 1200 && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
